--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 numpy==1.26.4
 tensorflow==2.17.1
-streamlit
-Pillow
-gdown
-openai
-protobuf
-keras
+streamlit==1.41.1
+Pillow==11.0.0
+gdown==5.2.0
+openai==1.57.4
